src/objects/Accounting_Entry_Details__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accountable Code</label>
        <referenceTo>AccountableCode__c</referenceTo>
        <relationshipLabel>Accounting Entry Details</relationshipLabel>
        <relationshipName>Accounting_Entry_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Entry_Parent__c</fullName>
        <label>Accounting Entry Parent</label>
        <referenceTo>Accounting_Entry__c</referenceTo>
        <relationshipLabel>Accounting Entry Details</relationshipLabel>
        <relationshipName>Accounting_Entry_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coin__c</fullName>
        <label>Coin</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Accounting Entry Details</relationshipLabel>
        <relationshipName>Accounting_Entry_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordinal_Text__c</fullName>
        <label>Ordinal Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ordinal__c</fullName>
        <label>Ordinal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accounting Entry Details</label>
    <nameField>
        <label>Accounting Entry Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Entry Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>